--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 body {
+  --background: #0f1e2d;
+  --input: #292b2f;
+  --white: #fff;
+  --white2: #fff;
+  --grey: #ccd5e0;
+}
+
+body.light {
+  --background: #ffffff;
+  --input: #777777;
+  --white: #0f1e2d;
+  --white2: #fff;
+  --grey: #192e44;
+}
+
+body {
   font-family: Maison Neue, Helvetica, sans-serif;
-  background-color: #0f1e2d;
-  color: #ccd5e0;
+  background-color: var(--background);
+  color: var(--grey);
   opacity: 1;
   margin: 0;
   font-size: 1.8rem;
@@ -14,7 +30,7 @@ body {
   font-weight: 800;
   line-height: 1.08;
   text-align: center;
-  color: #fff;
+  color: var(--white);
 }
 
 .description {
@@ -23,7 +39,7 @@ body {
   font-size: 1rem;
   font-weight: 300;
   text-align: center;
-  color: grey;
+  color: var(--grey);
 }
 
 .body {
@@ -56,10 +72,10 @@ body {
   min-width: 0px;
   max-width: 100%;
   max-height: 200px;
-  color: rgb(220, 221, 222);
+  color: var(--white2);
   font-size: 16px;
   unicode-bidi: plaintext;
-  background: rgb(41, 43, 47);
+  background: var(--input);
   border-width: 2px;
   border-style: solid;
   border-color: transparent;
@@ -94,11 +110,11 @@ body {
 .input {
   height: 36px;
   width: 100%;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-size: 16px;
   unicode-bidi: plaintext;
   padding: 0px 9px;
-  background: rgb(41, 43, 47);
+  background: var(--input);
   border-width: 2px;
   border-style: solid;
   border-color: transparent;
@@ -112,7 +128,7 @@ body {
   margin: 2px 0;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
@@ -124,7 +140,7 @@ body {
   align-items: center;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
   transform: rotate(90deg);
   transition: transform 150ms ease 0s;
@@ -134,7 +150,7 @@ body {
   margin: 2px 0;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
@@ -142,7 +158,7 @@ body {
   margin: 2px 0;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
@@ -154,7 +170,7 @@ body {
   align-items: center;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
   transform: rotate(90deg);
   transition: transform 150ms ease 0s;
@@ -181,7 +197,7 @@ body {
   background: rgb(88, 101, 242);
   border-color: rgb(88, 101, 242);
   cursor: pointer;
-  color: #fff;
+  color: var(--white2);
   display: inline-block;
   min-width: 60px;
   min-height: 36px;
@@ -230,7 +246,7 @@ body {
   margin: 2px 0;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
@@ -239,7 +255,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: rgb(41, 43, 47);
+  background: var(--input);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -253,25 +269,82 @@ body {
 .footer {
   width: 100%;
   text-align: center;
+  justify-content: center;
+}
+.switch {
+  cursor: pointer;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 
 .footer p {
-  margin: 0;
-  padding: 0;
+  line-height: 0;
+  margin: 0px !important;
+  padding: 0px !important;
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
 .footer span a {
   font-size: 13px;
   font-weight: 200;
-  color: rgb(220, 221, 222);
+  color: var(--white);
   font-family: Gilroy, Helvetica, sans-serif;
 }
 
 .footer a {
   text-decoration: none;
   color: blue;
+}
+
+input[type='checkbox'] {
+  justify-content: left;
+  align-items: flex-start;
+  visibility: hidden;
+  display: none;
+}
+.check {
+  text-align: center;
+  justify-content: center;
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 20px;
+  background: var(--white);
+  cursor: pointer;
+  border-radius: 200px;
+  overflow: hidden;
+  transition: ease-in 0.5s;
+}
+input[type='checkbox']:checked ~ .check {
+  background: var(--input);
+}
+.check:before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  background: var(--input);
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.check:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  background: var(--white);
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  transition: 0.5s;
+  transform: translateX(-50px);
+}
+input[type='checkbox']:checked ~ .check:after {
+  transform: translateX(0px);
 }
